# os

./: .gitignore  CMakeCache.txt
lab_1/: CMakeLists.txt  _test.sh  build.cmd  build.sh
lab_1/include/: print_hello_world.hpp
lab_1/src/: main.cpp  print_hello_world.cpp
lab_2/: CMakeLists.txt  build-linux-debug.sh  build-linux-release.sh  build-windows-debug.cmd  build-windows-release.cmd
lab_2/include/: run_process-linux.hpp  run_process-windows.hpp  run_process.hpp  vector.h
lab_2/src/: a.out  main.cpp  run_process-linux.cpp  run_process-windows.cpp  start_process.c
